--- a/src/app/vehiculo-hijo/vehiculo-hijo.component.html
+++ b/src/app/vehiculo-hijo/vehiculo-hijo.component.html
@@ -1,18 +1,38 @@
-<div class="container">
+<div class="container mt-4">
     <div class="row">
-        <div class="col">
-            <div>
-              {{indice+1}} {{ vehiculoLista.marca}} {{vehiculoLista.modelo}} {{vehiculoLista.Nmotor}} {{vehiculoLista.color}} {{vehiculoLista.trasmicion}} {{vehiculoLista.anio}} {{vehiculoLista.valor}}
-                <a class="btn btn-outline-warning" [routerLink]="['actualiza', indice]" [queryParams]="{accion: '1'}">Actualizar</a>
-                <a class="btn btn-outline-danger ml-1" [routerLink]="['eliminar', indice]" [queryParams]="{accion: '2'}">Eliminar</a>
-
+        <div class="col-md-8 offset-md-2">
+            <div class="card vehiculo-card mb-3 shadow-sm">
+                <div class="card-body">
+                    <!-- Información principal del vehículo -->
+                    <h5 class="card-title">
+                        <span class="badge badge-secondary">{{ indice + 1 }}</span>
+                        {{ vehiculoLista.marca }} {{ vehiculoLista.modelo }} - {{ vehiculoLista.anio }}
+                    </h5>
+                    <p class="card-text">
+                        <strong>Motor:</strong> {{ vehiculoLista.Nmotor }}<br>
+                        <strong>Color:</strong> {{ vehiculoLista.color }}<br>
+                        <strong>Transmisión:</strong> {{ vehiculoLista.trasmicion }}<br>
+                        <strong>Valor:</strong> ${{ vehiculoLista.valor }}
+                    </p>
+                    
+                    <!-- Botones de acción -->
+                    <div class="d-flex justify-content-end">
+                        <a class="btn btn-outline-warning mr-2" [routerLink]="['actualiza', indice]" [queryParams]="{accion: '1'}">Actualizar</a>
+                        <a class="btn btn-outline-danger" [routerLink]="['eliminar', indice]" [queryParams]="{accion: '2'}">Eliminar</a>
+                    </div>
+                </div>
+                
+                <!-- Sección de características adicionales -->
+                <div class="card-footer bg-light">
+                    <app-caracteristicas-vehiculo (caracteristicasVehiculo)="agregar_caracteristica($event)"></app-caracteristicas-vehiculo>
+                    <h6 class="mt-3">Características</h6>
+                    <ul class="list-unstyled ml-3">
+                        <li *ngFor="let caracteristica of array_caracteristicas" class="mb-1">
+                            <i class="bi bi-check-circle-fill text-success"></i> {{ caracteristica }}
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <app-caracteristicas-vehiculo (caracteristicasVehiculo)="agregar_caracteristica($event)"></app-caracteristicas-vehiculo>
-            <ul style="list-style: none;">
-                <li *ngFor="let caracteristica of array_caracteristicas">
-                    {{ caracteristica }}
-                </li>
-            </ul>
         </div>
     </div>
 </div>
