--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/contactanos">Contáctanos</a>
       </li>
+      <li class="nav-item" style="margin-left: 1280px;" *ngIf="!estaLogueado()">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <li class="nav-item" style="margin-left: 1280px;" *ngIf="estaLogueado()">
+        <a class="nav-link" (click)="logout()">Logout</a>
+      </li>
     </ul>
 
   </div>
