--- a/src/app/vehiculo-hijo/vehiculo-hijo.component.html
+++ b/src/app/vehiculo-hijo/vehiculo-hijo.component.html
@@ -17,8 +17,8 @@
                     
                     <!-- Botones de acción -->
                     <div class="d-flex justify-content-end">
-                        <a class="btn btn-outline-warning mr-2" [routerLink]="['actualiza', indice]" [queryParams]="{accion: '1'}">Actualizar</a>
-                        <a class="btn btn-outline-danger" [routerLink]="['eliminar', indice]" [queryParams]="{accion: '2'}">Eliminar</a>
+                        <a class="btn btn-outline-warning mr-2" [routerLink]="['/actualiza', indice]" [queryParams]="{accion: '1'}">Actualizar</a>
+                        <a class="btn btn-outline-danger" [routerLink]="['/eliminar', indice]" [queryParams]="{accion: '2'}">Eliminar</a>
                     </div>
                 </div>
                 
