--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Inicio</a>
+  <a class="navbar-brand" href="home">Inicio</a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="">Registro</a>
+        <a class="nav-link" href="home">Registro</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/vehiculos">Vehiculos</a>
